--- a/templates/wafer.users/profile.html
+++ b/templates/wafer.users/profile.html
@@ -27,9 +27,9 @@
       </div>
       <div class="col-md-10">
         {% if can_edit %}
-          <ul class="float-right btn-group btn-group-vertical profile-links">
-            <li><a href="{% url 'wafer_user_edit' object.username %}" class="btn btn-secondary">{% trans 'Edit Account' %}</a></li>
-            <li><a href="{% url 'wafer_user_edit_profile' object.username %}" class="btn btn-secondary">{% trans 'Edit Profile' %}</a></li>
+          <ul class="float-end btn-group btn-group-vertical profile-links">
+            <li class="nav-item"><a class="nav-link" href="{% url 'wafer_user_edit' object.username %}" class="btn btn-secondary">{% trans 'Edit Account' %}</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'wafer_user_edit_profile' object.username %}" class="btn btn-secondary">{% trans 'Edit Profile' %}</a></li>
             {% if WAFER_REGISTRATION_OPEN %}
               {% if WAFER_REGISTRATION_MODE == 'ticket' and not profile.is_registered  %}
                 {% url 'wafer_ticket_claim' as register_url %}
@@ -38,11 +38,11 @@
                 {% url 'register' as register_url %}
               {% endif %}
               {% if register_url %}
-                <li><a href="{{ register_url }}" class="btn btn-secondary">{% if profile.is_registered %}{% trans 'Update registration' context "conference" %}{% else %}{% trans 'Register' context "conference" %}{% endif %}</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ register_url }}" class="btn btn-secondary">{% if profile.is_registered %}{% trans 'Update registration' context "conference" %}{% else %}{% trans 'Register' context "conference" %}{% endif %}</a></li>
               {% endif %}
             {% endif %}
             {% if WAFER_TALKS_OPEN %}
-              <li><a href="{% url 'wafer_talk_submit' %}" class="btn btn-secondary">{% trans 'Submit Talk Proposal' %}</a></li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'wafer_talk_submit' %}" class="btn btn-secondary">{% trans 'Submit Talk Proposal' %}</a></li>
             {% endif %}
           </ul>
         {% endif %}
