Add Talk Submission to nabvar-brand '

--- a/templates/wafer/nav.html
+++ b/templates/wafer/nav.html
@@ -11,7 +11,7 @@
     {% endblock navtogglebutton %}
 
     {% block navtitle %}
-      <a class="navbar-brand" href="{% url 'wafer_page' %}"><img src="/static/img/site/logo.svg"> 2023</a>
+      <a class="navbar-brand" href="{% url 'wafer_page' %}"><img src="/static/img/site/logo.svg"> 2023 TALK SUBMISSION</a>
     {% endblock navtitle %}
 
     <div class="collapse navbar-collapse" id="wafer-navbar-collapse">
