--- a/templates/wafer/base.html
+++ b/templates/wafer/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <title>{{ site.title }}</title>
@@ -11,7 +13,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" media="screen">
+
 </head>
 <body>
     <div>
